--- a/mlx/notebooks/Data_exploration.ipynb
+++ b/mlx/notebooks/Data_exploration.ipynb
@@ -2232,7 +2232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "arc-agi",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
