--- a/cuda/notebooks/zindi-arc-solver.ipynb
+++ b/cuda/notebooks/zindi-arc-solver.ipynb
@@ -1461,89 +1461,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "64c292b1-6039-4336-979b-509a70afb33b",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "def generate_submission(\n",
-    "    test_data,\n",
-    "    model,\n",
-    "    expected_rows_list:pd.DataFrame,\n",
-    "    output_path=\"submission.csv\",\n",
-    "    intermediate_json_path=None,\n",
-    "    skip_completed=True,\n",
-    "    verbose=False,\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    Generates a CSV submission file by solving all test tasks with the provided model.\n",
-    "    \n",
-    "    Args:\n",
-    "        test_data: dict of test_xxx: [{train: ..., test: ...}]\n",
-    "        model: ARCModel with a solve_with_llm method\n",
-    "        expected_rows_list: list of expected row counts aligned with test_data keys\n",
-    "        output_path: path to final CSV submission\n",
-    "        intermediate_json_path: optional path to save intermediate predictions as JSON\n",
-    "        skip_completed: if True, will skip tasks already in intermediate JSON\n",
-    "        verbose: if True, will print solve logs\n",
-    "    \"\"\"\n",
-    "    assert len(test_data) == len(expected_rows_list), \"Mismatch between test set and expected row count list\"\n",
-    "\n",
-    "    submission_rows = []\n",
-    "    predictions = {}\n",
-    "    completion_times = []\n",
-    "\n",
-    "    # Load intermediate progress\n",
-    "    if intermediate_json_path and os.path.exists(intermediate_json_path):\n",
-    "        with open(intermediate_json_path, \"r\") as f:\n",
-    "            predictions = json.load(f)\n",
-    "\n",
-    "    for idx, row in tqdm(expected_rows_list.iterrows(), total=len(expected_rows_list)):    \n",
-    "        task_id = row.ID_\n",
-    "        task = test_data[task_id]        \n",
-    "    \n",
-    "        if skip_completed and task_id in predictions:\n",
-    "            continue\n",
-    "\n",
-    "        task = test_data[task_id]\n",
-    "        expected_rows = expected_rows_list[idx]\n",
-    "\n",
-    "        _, pred, completion_time = model.solve_with_llm(\n",
-    "            task=task,\n",
-    "            expected_rows=expected_rows,\n",
-    "            verbose=verbose,\n",
-    "        )\n",
-    "\n",
-    "        predictions[task_id] = {\"output\": pred}\n",
-    "        completion_times.append(completion_time)\n",
-    "\n",
-    "        # Save intermediate JSON\n",
-    "        if intermediate_json_path:\n",
-    "            with open(intermediate_json_path, \"w\") as f:\n",
-    "                json.dump(predictions, f)\n",
-    "\n",
-    "    # Build final submission rows\n",
-    "    test_keys = sorted(test_data.keys())\n",
-    "\n",
-    "    for task_id in test_keys:\n",
-    "        if task_id not in predictions:\n",
-    "            continue\n",
-    "        pred = predictions[task_id][\"output\"]\n",
-    "        for row_idx, row in enumerate(pred):\n",
-    "            row_str = \"\".join(str(cell) for cell in row)\n",
-    "            submission_rows.append((f\"{task_id}_{row_idx+1}\", row_str))\n",
-    "\n",
-    "    # Write to CSV\n",
-    "    with open(output_path, \"w\", newline=\"\") as f:\n",
-    "        writer = csv.writer(f)\n",
-    "        writer.writerow([\"ID\", \"row\"])\n",
-    "        writer.writerows(submission_rows)\n",
-    "\n",
-    "    print(f\"Submission saved to {output_path}\")\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "d831a53f-1f96-425a-9627-694e666736f8",
@@ -1570,17 +1487,7 @@
     "    test_data=test_data, \n",
     "    expected_rows_list=test_out_rows_sorted, \n",
     "    output_path=out_path\n",
-    ")\n",
-    "\n",
-    "#generate_submission(\n",
-    "#    test_data=test_data,\n",
-    "#    model=model,\n",
-    "#    expected_rows_list=test_out_rows.n_rows.values,\n",
-    "#    output_path=sub_path,\n",
-    "#    intermediate_json_path=json_path,\n",
-    "#    skip_completed=True,\n",
-    "#    verbose=True\n",
-    "#)"
+    ")"
    ]
   },
   {
@@ -1725,25 +1632,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3c028205-914a-4e39-958b-fbb0a9935647",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Can only compare identically-labeled Series objects",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[32m100\u001b[39m*\u001b[38;5;28msum\u001b[39m(\u001b[43msubmision\u001b[49m\u001b[43m.\u001b[49m\u001b[43mID\u001b[49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[43mss\u001b[49m\u001b[43m.\u001b[49m\u001b[43mID\u001b[49m)/ ss.shape[\u001b[32m0\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspace/miniconda3/envs/arc-agi/lib/python3.13/site-packages/pandas/core/ops/common.py:76\u001b[39m, in \u001b[36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[39m\u001b[34m(self, other)\u001b[39m\n\u001b[32m     72\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n\u001b[32m     74\u001b[39m other = item_from_zerodim(other)\n\u001b[32m---> \u001b[39m\u001b[32m76\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmethod\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspace/miniconda3/envs/arc-agi/lib/python3.13/site-packages/pandas/core/arraylike.py:40\u001b[39m, in \u001b[36mOpsMixin.__eq__\u001b[39m\u001b[34m(self, other)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;129m@unpack_zerodim_and_defer\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m__eq__\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     39\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__eq__\u001b[39m(\u001b[38;5;28mself\u001b[39m, other):\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_cmp_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mother\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moperator\u001b[49m\u001b[43m.\u001b[49m\u001b[43meq\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspace/miniconda3/envs/arc-agi/lib/python3.13/site-packages/pandas/core/series.py:6125\u001b[39m, in \u001b[36mSeries._cmp_method\u001b[39m\u001b[34m(self, other, op)\u001b[39m\n\u001b[32m   6122\u001b[39m res_name = ops.get_op_result_name(\u001b[38;5;28mself\u001b[39m, other)\n\u001b[32m   6124\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(other, Series) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m._indexed_same(other):\n\u001b[32m-> \u001b[39m\u001b[32m6125\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mCan only compare identically-labeled Series objects\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   6127\u001b[39m lvalues = \u001b[38;5;28mself\u001b[39m._values\n\u001b[32m   6128\u001b[39m rvalues = extract_array(other, extract_numpy=\u001b[38;5;28;01mTrue\u001b[39;00m, extract_range=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[31mValueError\u001b[39m: Can only compare identically-labeled Series objects"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "100*sum(submision.ID == ss.ID)/ ss.shape[0]"
    ]
@@ -1781,7 +1673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "arc-agi",
    "language": "python",
    "name": "python3"
   },
